# user-auth

./: .env  Cargo.toml  README.md
migrations/: 2020-06-08_03-25-43_create-database.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
src/config/: crypto.rs  mod.rs
src/db/: mod.rs  user.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/models/: user.rs
